--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -137,7 +137,7 @@
 
                             <div class="form-inline my-2 my-lg-0">
                                 {% if request.user.is_authenticated %}
-                                <p>Hello {{request.user}}</p>
+                                <p class="m-1">Hello {{request.user}}</p>
                                 <a href="{% url 'logout' %}"class="btn btn-warning">Logout</a>
                                 {% else %}
                                 <a href="{% url 'login' %}"class="btn btn-warning">Login</a>
